fix text overflow in menu

--- a/src/components/UserProfile/index.scss
+++ b/src/components/UserProfile/index.scss
@@ -17,6 +17,7 @@
       margin-bottom: 40px;
       background-color: $white;
       border-radius: 5px;
+      width: 100%;
 
       img {
          max-width: 250px;
@@ -44,6 +45,8 @@
                color: $text;
                font-size: 16px;
                font-weight: bold;
+               width: 250px;
+               word-break: break-all;
             }
             .userprofile__title {
                width: 100px;
@@ -74,6 +77,12 @@
    .userprofile {
       .userprofile__card {
          flex-grow: 1;
+         .userprofile__content {
+            max-width: 58%;
+         }
+         a {
+            max-width: 320px;
+         }
       }
       img {
          margin: 0 auto;
